--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,11 @@
   }
 }
 
+.scale_animate {
+  transition: 1s all ease-in-out;
+  transform: scale(2.3);
+}
+
 .feature-card:hover {
   background: rgb(240, 240, 240);
   transition: 0.2s all ease-in-out;
